# simple_screensaver

./: CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: simple_screensaver.cpp.ED54FDCCA5205FBA.idx
lib/: SimpleScreensaver.cpp  SimpleScreensaver.hpp
src/: gst_receiver.cpp  gst_sender.cpp  simple_screensaver.cpp
